--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.3",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.9",
     "mongoose-paginate-v2": "^1.7.1",
     "nanoid": "^5.0.5",
